<resources>
    <string name="app_name">Appliance Maintenance Management</string>

    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_errocc">Errors occurred:</string>

    <string name="validation_account_email_valid">A valid email must be provided.</string>
    <string name="validation_account_password_min">Password must be a minimum of %1$d characters.</string>
    <string name="validation_account_password_max">Password must be a maximum of %1$d characters.</string>


    <string name="validation_account_reg_type_null">A UserType must be selected.</string>
    <string name="validation_account_reg_type_invalid">A valid UserType must be selected.></string>
    <string name="validation_account_reg_dob_null">A date of birth must be selected</string>
    <string name="validation_account_reg_dob_valid">Please select a DOB between 1940 and 1995</string>
    <string name="validation_account_reg_firstname_min">First Name must a minimum of %1$d characters.</string>
    <string name="validation_account_reg_firstname_max">First Name must a maximum of %1$d characters.</string>
    <string name="validation_account_reg_surname_min">Surname must a minimum of %1$d characters.</string>
    <string name="validation_account_reg_surname_max">Surname must a maximum of %1$d characters.</string>

    <string name="account_edittext_hint_email">Email:</string>
    <string name="account_edittext_hint_password">Password:</string>
    <string name="login_button_text_submit">Login</string>
    <string name="login_button_text_register">Register</string>

    <string name="register_edittext_hint_passwordconfirm">Confirm Password:</string>
    <string name="register_edittext_hint_firstname">First Name:</string>
    <string name="register_edittext_hint_surname">Surname:</string>
    <string name="register_button_text_selectdob">Select D.o.B.</string>

    <string name="register_eng_select_org">Select Organisation:</string>

    <string name="dashb_propmng_button_text_properties">Properties</string>

    <string name="dashb_proptnt_button_text_property">Property</string>

    <string name="property_addr_text_title">Address:</string>
    <string name="property_details_text_title">Details:</string>
    <string name="property_propappliances_text_title">Appliances:</string>
    <string name="property_proptenants_text_title">Tenants:</string>

    <string name="property_details_text_age">Age:</string>
    <string name="property_details_text_bedcount">Bed Count:</string>
    <string name="property_details_text_bathroomcount">Bathroom Count:</string>

    <string name="propertyappliance_age_label">Age:</string>
    <string name="propertyappliance_status_label">Status:</string>

    <string name="appliance_productno_label">Product No:</string>
    <string name="appliance_name_label">Name:</string>
    <string name="appliance_brand_label">Brand:</string>
    <string name="appliance_type_label">Appliance Type:</string>

    <string name="generate_diagnostic_report">Generate Diagnostic Report</string>
    <string name="Ssetup_tag_propappl">Setup Tag</string>

    <string name="generate_diagnostic_report_hint_description">Description:</string>

    <string name="validation_diagnostic_report_description_min">Description must be a minimum of %1$d characters.</string>
    <string name="validation_diagnostic_report_description_max">Description must be a maximum of %1$d characters.</string>

    <string name="generate_action">Generate</string>
    <string name="send_action">Send</string>
    <string name="accept_action">Accept</string>
    <string name="decline_action">Decline</string>

    <string name="send_diag_requests_select_org">Select Organisations:</string>
    <string name="propertyappliance_stathist_title">Status History</string>

    <string name="nfc_err_not_supported">This device doesn\'t support NFC.</string>
    <string name="nfc_err_cant_write">Error during writing. Is the tag close enough to your device?</string>
    <string name="nfc_err_no_permission_or_not_loaded">Try again after appliances have loaded. You may not have permission to access this resource.</string>

    <string name="nfc_success_write">Tag setup successfully.</string>

    <string name="send_status_update_dialog_title">Update Property Appliance Status:</string>
    <string name="prop_appl_stat_update_success">Property Appliance Status Updated.</string>

    <string name="prop_appl_stat_curr_stat">Current Status:</string>

    <string name="diagnostic_reports_title">Diagnostic Repots:</string>
    <string name="diaq_req_title">Diagnostic Requests</string>

    <string name="pend_repair_rep_duration_text">Duration: </string>
    <string name="pend_repair_rep_onsite_text">Onsite: </string>
    <string name="pend_repair_rep_cost_text">Cost: </string>

    <string name="add_time_action">Add Time</string>

    <string name="schedule_start_time">Start Time: </string>
    <string name="schedule_end_time">End Time: </string>
    <string name="submit_action">Submit</string>
    <string name="action_delete">Delete</string>

    <string name="delete_confirmation">Are you sure you want to delete this?</string>
    <string name="repair_report_sched_title">Maintenance Schedule</string>
    <string name="pending_manager_sched_title">Manager Pending Schedules</string>
    <string name="pending_engineer_sched_title">Engineer Pending Schedules</string>

    <string name="accept_schedule_request">Accept Schedule Request?</string>
    <string name="repair_reports">Repair Reports</string>

    <string name="accept_request">Accept Request</string>

    <string name="pending_repair_report_title">Pending Repair Report</string>

    <string name="validation_pend_rep_report_cost_min">Cost must be a minimum of %1$d.</string>
    <string name="validation_pend_rep_report_cost_max">Cost must be a maximum of %1$d.</string>
    <string name="validation_pend_rep_report_desc_min">Description must be a minimum of  %1$d.</string>
    <string name="validation_pend_rep_report_desc_max">Description must be a maximum of  %1$d.</string>
    <string name="validation_pend_rep_report_est_dur_min">Estimated Duration must be a minimum of  %1$d.</string>
    <string name="validation_pend_rep_report_est_dur_max">Estimated Duration must be a maximum of  %1$d.</string>


</resources>