<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appl_maint_mngt.views.pending_repair_report.CreatePendingRepairReportActivity">

    <TextView
        android:id="@+id/create_pend_repair_rep_textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pending_repair_report_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/create_pend_repair_rep_edittext_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pend_repair_rep_duration_text"
        android:inputType="number"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/create_pend_repair_rep_textview_title"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/create_pend_repair_rep_checkbox_onsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pend_repair_rep_onsite_text"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/create_pend_repair_rep_edittext_duration"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/create_pend_repair_rep_edittext_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/pend_repair_rep_cost_text"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_pend_repair_rep_checkbox_onsite" />

    <EditText
        android:id="@+id/create_pend_repair_rep_edittext_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/generate_diagnostic_report_hint_description"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_pend_repair_rep_edittext_cost" />

    <Button
        android:id="@+id/create_pend_repair_rep_button_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_action"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/create_pend_repair_rep_edittext_desc"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
