<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appl_maint_mngt.views.account.AccountRegisterActivity">
    <EditText
        android:id="@+id/register_edittext_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/account_edittext_hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/register_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/account_edittext_hint_password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_edittext_email"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/register_edittext_password_conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_edittext_hint_passwordconfirm"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_edittext_password"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/register_edittext_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_edittext_hint_firstname"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_edittext_password_conf"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/register_edittext_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_edittext_hint_surname"
        android:inputType="textPersonName"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_edittext_firstname"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/register_spinner_usertype"
        android:layout_width="217dp"
        android:layout_height="38dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_edittext_surname"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/register_button_selectdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text_selectdob"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/register_spinner_usertype"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/register_textview_date_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        app:layout_constraintLeft_toRightOf="@+id/register_button_selectdate"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/register_spinner_usertype" />

    <Button
        android:id="@+id/register_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text_register"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/register_button_selectdate"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
