<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appl_maint_mngt.views.account.LoginActivity">

    <EditText
        android:id="@+id/login_edittext_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/account_edittext_hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/login_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_edittext_email"
        android:ems="10"
        android:hint="@string/account_edittext_hint_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/login_edittext_email"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/login_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/login_button_text_submit"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/login_edittext_password"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/login_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_button_submit"
        android:text="@string/login_button_text_register"
        app:layout_constraintLeft_toRightOf="@+id/login_button_submit"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/login_edittext_password" />
</android.support.constraint.ConstraintLayout>
