<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appl_maint_mngt.views.pending_repair_report.InspectPendingRepairReportActivity">

    <TextView
        android:id="@+id/pend_repair_rep_textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_title" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="41dp"
        android:text="@string/pend_repair_rep_duration_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_desc" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="41dp"
        app:layout_constraintLeft_toRightOf="@+id/pend_repair_rep_textview_duration_label"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_desc" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_onsite_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="41dp"
        android:text="@string/pend_repair_rep_onsite_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_duration_label" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_onsite_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="41dp"
        app:layout_constraintLeft_toRightOf="@+id/pend_repair_rep_textview_onsite_label"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_duration_label" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_cost_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="41dp"
        android:text="@string/pend_repair_rep_cost_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_onsite_label" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_cost_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="41dp"
        app:layout_constraintLeft_toRightOf="@+id/pend_repair_rep_textview_cost_label"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_onsite_value" />

    <Button
        android:id="@+id/pend_repair_rep_button_accept"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@android:color/holo_blue_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:text="@string/accept_action"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_cost_label"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/pend_repair_rep_button_decline"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/decline_action"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_cost_label"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
