<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appl_maint_mngt.views.pending_repair_report.PendingRepairReportActivity">

    <TextView
        android:id="@+id/pend_repair_rep_textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/pending_repair_report_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_title" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="49dp"
        android:text="@string/pend_repair_rep_duration_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_desc" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="49dp"
        app:layout_constraintLeft_toRightOf="@+id/pend_repair_rep_textview_duration_label"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_desc" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_onsite_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/pend_repair_rep_onsite_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_duration_label" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_onsite_value"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toRightOf="@+id/pend_repair_rep_textview_onsite_label"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_duration_label" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_cost_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/pend_repair_rep_cost_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_onsite_label" />

    <TextView
        android:id="@+id/pend_repair_rep_textview_cost_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toRightOf="@+id/pend_repair_rep_textview_cost_label"
        app:layout_constraintTop_toBottomOf="@+id/pend_repair_rep_textview_onsite_label" />

</android.support.constraint.ConstraintLayout>
